[metadata]
name = tnqmetro
version = 1.0.3
author = Krzysztof Chabuda
author_email = krzysztof.chabuda@fuw.edu.pl
description = Tensor-network based package for efficient quantum metrology computations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kchabuda/TNQMetro
project_urls =
    Documentation = https://github.com/kchabuda/TNQMetro/wiki
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Development Status :: 5 - Production/Stable

[options]
package_dir =
packages = find:
python_requires = >=3.6
install_requires = 
    numpy>=1.11.0
    ncon

[options.packages.find]
where = 